# decoap

./: .gitignore  LICENSE  Makefile  README.md  decoap.py  pyproject.toml  spec.md
src/decoap/: decoap.py  host.py  manifest.py  oci.py
test/: test_oci_Image.py
